; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_int_data_free.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_int_data_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.int_data = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.int_data*)* @int_data_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @int_data_free(%struct.int_data* %0) #0 {
  %2 = alloca %struct.int_data*, align 8
  store %struct.int_data* %0, %struct.int_data** %2, align 8
  %3 = load %struct.int_data*, %struct.int_data** %2, align 8
  %4 = getelementptr inbounds %struct.int_data, %struct.int_data* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.int_data*, %struct.int_data** %2, align 8
  %9 = getelementptr inbounds %struct.int_data, %struct.int_data* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @bfree(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @bfree(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
